<resources>
    <string name="app_name">AzmoonProject</string>
    <string name="Splash_Input">آزمون یار</string>
    <string name="toolBarQuizName">آزمون ها</string>
    <string name="dialogTitleFinish">پایان آزمون</string>
    <string name="dialogTextFinish">آیا از پایان آزمون اطمینان دارید؟</string>
    <string name="dialogYesFinish">بله</string>
    <string name="dialogNoFinish">خیر</string>
    <string name="dialogStartTitle">نکات آزمون</string>
    <string name="dialogOut">خروج</string>
    <string name="dialogStart">شروع آزمون</string>
    <string name="dialogStartText">•هر آزمون فقط یک بار امتحان گرفته می شود و دفعات بعد فقط جواب صحیح قابل مشاهده است.\n•زمان آزمون از وقتی روی دکمه شروع آزمون کلیک کنید محاسبه می شود.\n•سوالات نمره منفی ندارد.</string>
    <string name="lorem_ipsum">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="next">بعدی</string>
    <string name="previous">قبلی</string>
    <string name="end_test">اتمام آزمون</string>
    <string name="test">آزمون</string>
    <string name="test_tips">نکات آزمون</string>
    <string name="start_test">شروع آزمون</string>
    <string name="cancel">انصراف</string>
    <string name="question">سوال</string>
    <string name="test_result">نتیجه آزمون</string>
    <string name="correct_answer">تعداد پاسخ صحیح : </string>
    <string name="number_correct_answer">20</string>
    <string name="number_incorrect_response">10</string>
    <string name="incorrect_response">تعداد پاسخ نادرست : </string>
    <string name="number_not_answered">5</string>
    <string name="not_answered">پاسخ داده نشده : </string>
    <string name="confirmed">تایید</string>
    <string name="answer_sheet">پاسخنامه</string>
    <string name="open_navigation_drawer">بازکردن</string>
    <string name="close_navigation_drawer">بستن</string>
    <string name="name">آزمون یار </string>
    <string name="main_page">صفحه اصلی</string>
    <string name="account">حساب کاربری</string>
    <string name="logout">خروج از حساب کاربري</string>
    <string name="courses">دوره ها</string>
    <string name="lessons">درس ها</string>
    <string name="about_academy">درباره آموزشگاه</string>
    <string name="guide">راهنما</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="contact_us2">ارتباط با توسعه دهندگان</string>
    <string name="about">آدرس:
        ملایر.خ شهید طلوعی.ابتدای خسروی.جنب گل فروشی
        تلفن ۳۲۲۲۴۶۰۷
        همراه ۰۹۱۸۳۵۱۹۷۰۲
        مجتمع آموزشی یاهو با ۳ شعبه فعال در زمینه:
        کامپیوتر،حسابداری،توریسم،خدمات آموزشی،ایمنی و بهداشت،تعمیرات تخصصی موبایل ،مراقبت و زیبایی بامجوز رسمی از سازمان آموزش فنی و حرفه ای کشور تنها نمایندگی انستیتو ایزایران در ملایر دارای ۱۵ سال سابقه آموزشی دارای رتبه یک اعتبار سنجی آموزشگاههای استان با کادری مجرب از اساتید باتجربه و هیات علمی دانشگاهها
        بامدیریت :خانم بیاتی اصل</string>
</resources>