<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="all">
        <item
            android:id="@+id/item_home1"
            android:icon="@drawable/home"
            android:title="@string/main_page" />
        <item
            android:id="@+id/item_account"
            android:icon="@drawable/account"
            android:title="@string/account" />
        <item
            android:id="@+id/item_courses"
            android:icon="@drawable/book"
            android:title="@string/courses" />

    </group>

    <group android:id="@+id/g2" android:checkableBehavior="all">
        <item
            android:id="@+id/tem_contact_us"
            android:icon="@drawable/information"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/item_about_academy"
            android:icon="@drawable/about"
            android:title="@string/about_academy" />

    </group>
    <group android:id="@+id/g3" android:checkableBehavior="all">
        <item
            android:id="@+id/item_guide"
            android:icon="@drawable/guide"
            android:title="@string/guide" />
        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>