<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/vazir_bold"
            android:text="@string/test_result"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_dialog_finish_test_txt_number_correct_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/number_correct_answer"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/correct_answer"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_dialog_finish_test_txt_number_wrongNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/number_incorrect_response"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/incorrect_response"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_dialog_finish_test_txt_number_nineteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/number_not_answered"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/not_answered"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_dialog_finish_test_txt_timeTookTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="@string/number_not_answered"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir_light"
                android:text="مدت زمان آزمون :"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/custom_dialog_finish_test_bnt1"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_button_dialog_orange"
        android:clickable="true"
        android:fontFamily="@font/vazir"
        android:text="@string/answer_sheet"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>

